--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -20,3 +20,11 @@ jobs:
 
       - name: Run Tests
         run: pytest tests/ --env qa --html=report.html
+
+
+      - name: HTML Preview
+        id: html_preview
+        uses: pavi2410/html-preview-action@v4
+        with:
+          html_file: 'report.html'
+          job_summary: true
