--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -19,7 +19,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Tests
-        run: pytest tests/ --env qa --html=report.html
+        run: pytest  --env qa --html=report.html -m page
+
 
 
       - name: HTML Preview
