--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -32,5 +32,5 @@ jobs:
         id: html_preview
         uses: pavi2410/html-preview-action@v4
         with:
-          html_file: 'report.html'
+          html_file: '/report.html'
           job_summary: true
