--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -27,14 +27,17 @@ jobs:
             name: report
             path: report.html
 
-      - name: Check if report.html exists
-        run: ls -la report.html
-
-
+      - name: Find full path of report.html
+        run: |
+          echo "Report location:"
+          find $GITHUB_WORKSPACE -name "report.html"
+      
+      
+      
 
       - name: HTML Preview
         id: html_preview
         uses: pavi2410/html-preview-action@v4
         with:
-          html_file: '/report.html'
+          html_file: 'report.html'
           job_summary: true
