--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -39,5 +39,5 @@ jobs:
         id: html_preview
         uses: pavi2410/html-preview-action@v4
         with:
-          html_file: 'report.html'
+          html_file: '/selenium_python/report.html'
           job_summary: true
